fix: correct charset in HTML and update page title; modify dark mode background color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,7 +50,8 @@
 		--sidebar-ring: 217.2 91.2% 59.8%;
 	}
 	.dark {
-		--background: 342 50% 10%;
+		/* --background: 342 50% 10%; */
+		--background: 240 6% 10%;
 		--foreground: 342 5% 100%;
 		--card: 342 50% 10%;
 		--card-foreground: 342 5% 100%;
